# proyecto_c_cpp

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: CI_Main.yml  ci.yml  lint.yml  main_lint.yml
src/: main.cpp  suma.cpp
tests/: test_suma.cpp
